<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name_short">Notes</string>
    <string name="action_archive">Archive</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_clear">Clear</string>
    <string name="action_convert_to_list">Convert to list</string>
    <string name="action_convert_to_text">Convert to text</string>
    <string name="action_copy">Make a copy</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_checked">Delete checked items</string>
    <string name="action_delete_forever">Delete forever</string>
    <string name="action_delete_selection">Delete selection</string>
    <string name="action_delete_selection_forever">Delete selection forever</string>
    <string name="action_empty_trash">Empty recycle bin</string>
    <string name="action_empty_trash_short">Empty</string>
    <string name="action_keep">Keep</string>
    <string name="action_labels">Change labels</string>
    <string name="action_layout_grid">View as grid</string>
    <string name="action_layout_list">View as list</string>
    <string name="action_layout_timeline">View as timeline</string>
    <string name="action_manage">Manage</string>
    <string name="action_mark_as_done">Mark as done</string>
    <string name="action_none">None</string>
    <string name="action_ok">OK</string>
    <string name="action_open">Open</string>
    <string name="action_pin">Pin</string>
    <string name="action_postpone">Postpone</string>
    <string name="action_reminder_add">Add reminder</string>
    <string name="action_reminder_edit">Edit reminder</string>
    <string name="action_rename">Rename</string>
    <string name="action_restore">Restore</string>
    <string name="action_search">Search</string>
    <string name="action_select_all">Select all</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_uncheck_all">Uncheck all items</string>
    <string name="action_undo">Undo</string>
    <string name="action_unpin">Unpin</string>
    <string name="shortcut_text_note">New text note</string>
    <string name="shortcut_text_note_short">New text</string>
    <string name="shortcut_list_note">New list note</string>
    <string name="shortcut_list_note_short">New list</string>
    <string name="shortcut_reminders">Reminders</string>
    <string name="shortcut_reminders_short">Reminders</string>
    <string name="note_location_active">Notes</string>
    <string name="note_location_archived">Archived</string>
    <string name="note_location_deleted">Deleted</string>
    <string name="note_location_labels">Labels</string>
    <string name="note_pinned">Pinned</string>
    <string name="note_not_pinned">Others</string>
    <string name="note_placeholder_active">You don\'t have any notes.\nClick on the + to add one.</string>
    <string name="note_placeholder_archived">No archived notes</string>
    <string name="note_placeholder_deleted">Recycle bin is empty</string>
    <plurals name="note_list_item_info">
        <item quantity="one">+ %d other list item</item>
        <item quantity="other">+ %d other list items</item>
    </plurals>
    <plurals name="note_list_item_info_checked">
        <item quantity="one">+ %d checked item</item>
        <item quantity="other">+ %d checked items</item>
    </plurals>
    <string name="trash_reminder_message">Notes in recycle bin are automatically deleted after %d days.</string>
    <string name="trash_delete_message">This note will be permanently deleted.</string>
    <string name="trash_delete_selected_message">Selected notes will be permanently deleted.</string>
    <string name="trash_empty_message">All notes in recycle bin will be permanently deleted.</string>
    <string name="search_hint">Search notes</string>
    <string name="search_empty_placeholder">No notes match your search. Try another query.</string>
    <string name="sort_title">Sort options</string>
    <string name="sort_direction">Sort direction</string>
    <string name="sort_direction_ascending">Ascending</string>
    <string name="sort_direction_descending">Descending</string>
    <string name="sort_field">Sort by</string>
    <string name="sort_field_created">Date created</string>
    <string name="sort_field_modified">Date modified</string>
    <string name="sort_field_title">Title</string>
    <string name="edit_add_title">Create note</string>
    <string name="edit_change_title">Edit note</string>
    <string name="edit_hint_note_title">Title</string>
    <string name="edit_hint_note_content">Note</string>
    <string name="edit_hint_note_item">List item</string>
    <string name="edit_message_blank_note_discarded">Blank note discarded.</string>
    <plurals name="edit_move_archive_message">
        <item quantity="one">Note archived.</item>
        <item quantity="other">Notes archived.</item>
    </plurals>
    <plurals name="edit_message_move_delete">
        <item quantity="one">Note moved to recycle bin.</item>
        <item quantity="other">Notes moved to recycle bin.</item>
    </plurals>
    <plurals name="edit_message_move_restore">
        <item quantity="one">Note restored.</item>
        <item quantity="other">Notes restored.</item>
    </plurals>
    <plurals name="edit_message_move_unarchive">
        <item quantity="one">Note unarchived.</item>
        <item quantity="other">Notes unarchived.</item>
    </plurals>
    <string name="edit_in_trash_message">Cannot edit note in recycle bin.</string>
    <string name="edit_copy_suffix">Copy</string>
    <string name="edit_copy_untitled_name">Untitled</string>
    <string name="edit_convert_keep_checked">Text notes don\'t support checkboxes. Remove the checked items?</string>
    <plurals name="edit_checked_items">
        <item quantity="one">%d checked item</item>
        <item quantity="other">%d checked items</item>
    </plurals>
    <string name="note_reminders">Reminders</string>
    <string name="reminder_upcoming">Upcoming</string>
    <string name="reminder_today">Today</string>
    <string name="reminder_overdue">Overdue</string>
    <string name="reminder_date">Date</string>
    <string name="reminder_time">Time</string>
    <string name="reminder_invalid_time">This time has already passed.</string>
    <string name="reminder_quick_in_one_hour">In 1 hour</string>
    <string name="reminder_quick_tomorrow">Tomorrow 9am</string>
    <string name="reminder_quick_next_week">Next week</string>
    <string name="reminder_notif_channel_title">Reminders</string>
    <string name="reminder_notif_channel_descr">Reminders set on notes</string>
    <string name="reminder_empty_placeholder">No reminders set</string>
    <string name="reminder_restricted_battery">Reminder alarms may not work correctly because the
    app has restricted battery usage. This can be changed in the app settings.</string>
    <string name="reminder_notif_permission">To be able to send reminder notifications, the app needs a permission.
    Click OK to show the permission request. You will be able to set a reminder afterwards.</string>
    <string name="reminder_notif_permission_denied">The notification permission has been denied.
    Reminder alarms will not work until enabled.</string>
    <string name="label_create">Create new label</string>
    <string name="label_edit">Edit label name</string>
    <string name="label_manage">Manage labels</string>
    <string name="label_select">Select labels</string>
    <string name="label_already_exists">A label with this name already exists.</string>
    <string name="label_hidden_option">Hide notes with this label from the active and archived note sections</string>
    <string name="label_empty_placeholder">No labels created</string>
    <string name="label_delete_message">Selected labels will be deleted, but the notes associated
    to them will be kept.</string>
    <string name="label_notes_empty_placeholder">No notes tagged with this label</string>
    <string name="pref_group_appearance">Appearance</string>
    <string name="pref_theme">App theme</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_theme_system">Follow system</string>
    <string name="pref_dynamic_colors">Use dynamic colors</string>
    <string name="pref_strikethrough_checked">Strikethrough checked list items</string>
    <string name="pref_preview_labels">Maximum number of labels in preview</string>
    <string name="widget_guide_title">Widgets</string>
    <string name="pref_shown_date">Date shown for notes</string>
    <string name="pref_shown_date_added">Creation date</string>
    <string name="pref_shown_date_modified">Last modified date</string>
    <string name="pref_shown_date_none">No date shown</string>
    <string name="pref_preview_lines">Maximum lines in previews</string>
    <string name="pref_preview_lines_summary">Configure how many lines and items are shown on notes,
        for each layout mode and note type</string>
    <string name="pref_preview_lines_grid_layout">Grid layout</string>
    <string name="pref_preview_lines_list_layout">List layout</string>
    <string name="pref_preview_lines_text">Lines in text note preview</string>
    <string name="pref_preview_lines_list">Items in list note preview</string>
    <string name="pref_group_behavior">Behavior</string>
    <string name="pref_behavior_swipe_action_left">Swipe left action</string>
    <string name="pref_behavior_swipe_action_right">Swipe right action</string>
    <string name="pref_behavior_move_checked">Move checked items to the bottom</string>
    <string name="pref_exact_alarm_title">Exact reminders</string>
    <string name="pref_exact_alarm_summary_granted">On — reminders fire at the exact time set</string>
    <string name="pref_exact_alarm_summary_denied">Off — reminders may be delayed up to an hour while the device is idle. Tap to allow exact reminders.</string>
    <string name="pref_group_data">Data</string>
    <string name="pref_data_export">Export data</string>
    <string name="pref_data_export_summary">Export notes data as JSON</string>
    <string name="pref_data_encrypted_export">Encrypted export</string>
    <string name="pref_data_encrypted_export_summary">Encrypts the exported notes. Access is not possible without
        the correct password.</string>
    <string name="pref_data_auto_export">Automatic data export</string>
    <string name="pref_data_auto_export_summary">Automatically export the app\'s data to a file, once a day.</string>
    <string name="pref_data_auto_export_date">(Last exported on %s)</string>
    <string name="pref_data_import">Import data</string>
    <string name="pref_data_import_summary">Import previously exported JSON data, merging with existing data.</string>
    <string name="pref_data_clear">Clear all data</string>
    <string name="pref_group_about">About</string>
    <string name="pref_about_view_source">View on Github (Original)</string>
    <string name="pref_about_view_source_fork">View on Github (Forked)</string>
    <string name="pref_about_version">Version</string>
    <string name="term_policy"><![CDATA[Term & Policy]]></string>
    <string name="rate_this_app_5">Rate this app 5★</string>
    <string name="get_more_apps">Get more apps</string>
    <string name="share_this_app">Share this app</string>
    <string name="pref_language">Language</string>
    <string name="pref_vip_title">Premium</string>
    <string name="pref_privacy_settings">Privacy settings</string>
    <string name="pref_privacy_settings_summary">Manage advertising consent (GDPR / EEA)</string>
    <string name="time_travel_menu_title">Note history</string>
</resources>