<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item android:id="@+id/drawerItemNotes" android:checkable="true" android:checked="true" android:icon="@drawable/ic_list" android:title="@string/note_location_active" />
        <item android:id="@+id/drawerItemReminders" android:checkable="true" android:icon="@drawable/ic_alarm" android:title="@string/note_reminders" />
    </group>

    <group android:id="@+id/drawerGroupLabels">
        <item android:id="@+id/drawerLabels" android:title="@string/note_location_labels">
            <menu />
        </item>
    </group>

    <group android:id="@+id/drawerGroupLabelActions">

        <item android:id="@+id/drawerItemEditLabels" android:checkable="false" android:enabled="true" android:icon="@drawable/ic_label_multiple_outline" android:orderInCategory="2" android:title="@string/label_manage" android:visible="false" />
        <item android:id="@+id/drawerItemCreateLabel" android:checkable="false" android:icon="@drawable/ic_plus" android:orderInCategory="2" android:title="@string/label_create" />
    </group>

    <group android:id="@+id/drawerGroupArchivedDeleted">
        <item android:id="@+id/drawerItemArchived" android:checkable="true" android:icon="@drawable/ic_archive" android:orderInCategory="2" android:title="@string/note_location_archived" />
        <item android:id="@+id/drawerItemDeleted" android:checkable="true" android:icon="@drawable/ic_delete" android:orderInCategory="2" android:title="@string/note_location_deleted" />
    </group>

    <group android:id="@+id/drawerGroupSettings">
        <item android:id="@+id/drawerItemVip" android:checkable="false" android:icon="@drawable/ic_vip_sparkle" android:orderInCategory="3" android:title="@string/pref_vip_title" />
        <item android:id="@+id/drawerItemWidgetGuide" android:checkable="false" android:icon="@drawable/ic_widgets" android:orderInCategory="4" android:title="@string/widget_guide_title" />
        <item android:id="@+id/drawerItemSettings" android:checkable="false" android:icon="@drawable/ic_settings" android:orderInCategory="5" android:title="@string/action_settings" />
    </group>

</menu>
