<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/itemType"
        android:icon="@null"
        android:title="@null"
        app:showAsAction="always"
        tools:icon="@drawable/ic_checkbox"
        tools:title="@string/action_convert_to_list" />

    <item
        android:id="@+id/itemMove"
        android:icon="@null"
        android:title="@null"
        app:showAsAction="ifRoom"
        tools:icon="@drawable/ic_archive"
        tools:title="@string/action_archive" />

    <item
        android:id="@+id/itemPin"
        android:icon="@null"
        android:title="@null"
        app:showAsAction="ifRoom"
        tools:icon="@drawable/ic_pin"
        tools:title="@string/action_pin" />

    <item
        android:id="@+id/itemReminder"
        android:icon="@drawable/ic_alarm"
        android:title="@null"
        app:showAsAction="ifRoom"
        tools:title="@string/action_reminder_add" />

    <item
        android:id="@+id/itemLabels"
        android:icon="@drawable/ic_label_outline"
        android:title="@string/action_labels"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemShare"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemUncheckAll"
        android:title="@string/action_uncheck_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemDeleteChecked"
        android:title="@string/action_delete_checked"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemCopy"
        android:title="@string/action_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemDelete"
        android:title="@null"
        app:showAsAction="ifRoom"
        tools:title="@string/action_delete" />

    <item
        android:id="@+id/itemReadingMode"
        android:icon="@drawable/ic_eye"
        android:title="Reading Mode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemFocusMode"
        android:icon="@drawable/ic_eye_off"
        android:title="Focus"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemExport"
        android:title="Export as PDF/Image"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemLock"
        android:title="Lock note"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemTimeTravel"
        android:icon="@drawable/ic_restore"
        android:title="@string/time_travel_menu_title"
        app:showAsAction="never" />

</menu>
