<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentNoteLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:transitionGroup="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fitsSystemWindows="true"
        android:transitionName="toolbar"
        app:layout_behavior="com.mckimquyen.notes.ui.common.AppBarLayoutWithPaddingBehavior"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/recyclerView">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="?toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:titleTextColor="?colorControlNormal"
            tools:menu="@menu/menu_toolbar_home"
            tools:navigationIcon="@drawable/ic_menu"
            tools:title="@string/note_location_active" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/placeholderImv"
            style="@style/PlaceholderImageViewStyle"
            android:layout_marginTop="-64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_list" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/placeholderTxv"
            style="@style/PlaceholderTextViewStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeholderImv"
            tools:text="@string/note_placeholder_active" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/placeholderGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:constraint_referenced_ids="placeholderImv,placeholderTxv"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/v_item_note_text"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/edit_add_title"
        android:src="@drawable/ic_plus"
        app:layout_behavior="com.mckimquyen.notes.ui.common.SnackBarFloatingActionButtonBehaviour"
        app:shapeAppearance="@style/RoundFAB" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
